# ShaderIntrospector

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  example.cpp
assets/shaders/: testF.glsl  testV.glsl
include/: AGreflection.h  tools.h
include/attributeReflector/: attributeHandle.h  attributeReflector.h
include/attributeReflector/attribute/: attributeHandle.h  attribute_entry.h
include/templates/: consoleTools.h  opengl_iterator.h  template_iterator.h
include/toString/: toString.h
include/uniformBlockReflector/: uniformBlockData.h  uniformBlockField.h  uniformBlockHandle.h  uniformBlockInfo.h  uniformBlockIterator.h  uniformBlockMember.h  uniformBlockReflector.h  uniformBlockSequence.h  uniformBlockView.h
include/uniformReflector/: uniformReflector.h
include/uniformReflector/traits/: traits.h
include/uniformReflector/uniform/: uniform_entry.h
include/uniformReflector/uniform/methods/: get.inl  operator_T.inl  operator_os.inl  set.inl
src/attributeReflector/: attributeReflector.cpp
src/attributeReflector/attribute/: attribute_entry.cpp
src/uniformBlockReflector/: uniformBlockInfo.cpp  uniformBlockReflector.cpp
src/uniformReflector/: uniformReflector.cpp
src/uniformReflector/uniform/: uniform_entry.cpp
